--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ body::-webkit-scrollbar-thumb {
   padding: 50px 0 400px 0;
   height: 100vh;
   box-sizing: border-box;
-  opacity: 0;
+  /* opacity: 0; */
   position: relative;
 }
 
@@ -245,7 +245,6 @@ nav .link-styled {
 .jumbotron-section .button {
   background: #0071e3;
   color: #fff;
-  cursor: pointer;
   display: inline-block;
   text-align: center;
   white-space: nowrap;
@@ -253,8 +252,10 @@ nav .link-styled {
   font-weight: 400;
   min-width: 28px;
   padding: 8px 16px;
-  border-radius: 980px;
+  border-radius: 3rem;
   margin: 0 14px;
+
+  cursor: pointer;
 }
 
 .jumbotron-section .link {
@@ -330,7 +331,7 @@ nav .link-styled {
   display: flex;
   align-items: center;
   flex-direction: column;
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .sound-section .title {
